# kzpy

./: pyproject.toml  requirements.txt
.github/workflows/: test.yaml
src/: config_loader.py
src/kzpy/: _command.py  _serial.py  _type.py  config_loader.py  device.py  motion.py  validate.py
src/kzpy/config/: aries_config.json  crux_config.json
tests/: test_command.py  test_config_loader.py  test_device.py  test_motion.py  test_serial.py  test_type.py  test_validate.py
