[project]
name = "kzpy"
version = "0.2.16"
description = "khozu device manager"
requires-python = ">=3.11"
dependencies = [
  "pydantic==2.11.3",
  "pyserial==3.5",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.5",
  "auto_mix_prep==0.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"kzpy" = ["config/*.json"]
